# projectile_flight

./: .gitignore  Makefile  README.md  example.py  example_direct.py  example_reverse.py  main.py  pyproject.toml  setup.py  test.py
projectile_flight/: __init__.py  runge_kutta.py
src/: base.py  direct.py  hermite_polynomial.py  method_chord.py  projectile_flight.py  reverse.py  runge_kutta.py
src/cauchy_solution/: __init__.py  runge_kutta.py
src/dto/: ode.py  theta_interval.py  theta_results.py
src/interpolation/: hermite_polynomial.py
src/iterations_method/: method_chord.py  method_secant.py
tests/: runge_kutta_test.py
