[tool.poetry]
name = "projectile-flight"
version = "0.1.0"
description = ""
authors = ["Ринат Кучаев <RZKuchaev@stud.kpfu.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.2"
numpy = "^2.1.3"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
